[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/art/title_page.png" type="Texture" id=1]
[ext_resource path="res://src/art/order_paper.png" type="Texture" id=2]
[ext_resource path="res://src/art/potion_healing_1.png" type="Texture" id=3]
[ext_resource path="res://src/art/scroll.png" type="Texture" id=4]
[ext_resource path="res://src/fonts/menu_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/art/crystal_MUSH.png" type="Texture" id=6]
[ext_resource path="res://src/art/crystal.png" type="Texture" id=7]
[ext_resource path="res://src/art/mushroom.png" type="Texture" id=8]
[ext_resource path="res://src/art/lizard.png" type="Texture" id=9]
[ext_resource path="res://src/art/pestle.png" type="Texture" id=10]
[ext_resource path="res://src/art/mortar.png" type="Texture" id=11]
[ext_resource path="res://src/art/eyeball.png" type="Texture" id=12]
[ext_resource path="res://src/scenes/MenuButton.gd" type="Script" id=13]
[ext_resource path="res://src/scenes/MainMenu.gd" type="Script" id=14]
[ext_resource path="res://src/art/potion_healing_4.png" type="Texture" id=15]
[ext_resource path="res://src/scenes/VolumeControl.gd" type="Script" id=16]
[ext_resource path="res://src/scenes/FadeOut.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/scenes/MusicToggle.gd" type="Script" id=18]
[ext_resource path="res://src/fonts/BetterGrade-519DV.ttf" type="DynamicFontData" id=19]

[sub_resource type="Animation" id=1]
resource_name = "GotoOptions"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 846, 299 ), Vector2( 1200, -1000 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureButton:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10.7, 336.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureButton2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 234, 228 ), Vector2( -1000, 500 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureButton2:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -26.9, -360.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Mortar/Pestle:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 156, -102 ), Vector2( 98, -200 ), Vector2( 12, -106 ), Vector2( 72, -16 ), Vector2( 156, -102 ), Vector2( 98, -200 ), Vector2( 12, -106 ), Vector2( 72, -16 ), Vector2( 156, -102 ), Vector2( 98, -200 ), Vector2( 12, -106 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TextureButton3:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -822, -365 ), Vector2( 1.00012, -18 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TextureButton3:rect_rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -204.6, 16.1406 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Volume:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Music:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Label:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.4, 2 ),
"transitions": PoolRealArray( 1, 8.00002, 8.00002 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 350
outline_size = 10
font_data = ExtResource( 19 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Mushroom" type="Sprite" parent="TextureRect"]
position = Vector2( 1240, 909 )
rotation = 0.663567
scale = Vector2( 0.185898, 0.185898 )
texture = ExtResource( 8 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 846.0
margin_top = 299.0
margin_right = 1346.0
margin_bottom = 648.999
rect_rotation = 10.7
rect_pivot_offset = Vector2( 250, 175 )
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="TextureButton"]
margin_left = 86.1467
margin_top = 72.6424
margin_right = 535.147
margin_bottom = 282.642
mouse_filter = 2
custom_colors/default_color = Color( 0.345098, 0.4, 0.0470588, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "Options"
scroll_active = false

[node name="Eyeball" type="Sprite" parent="TextureButton"]
position = Vector2( 370.513, 328.927 )
rotation = -0.18675
scale = Vector2( 0.219737, 0.219737 )
texture = ExtResource( 12 )

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 234.0
margin_top = 228.0
margin_right = 634.0
margin_bottom = 627.952
rect_rotation = -26.9
rect_pivot_offset = Vector2( 200, 200 )
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 13 )

[node name="RichTextLabel" type="RichTextLabel" parent="TextureButton2"]
margin_left = 79.3771
margin_top = 101.801
margin_right = 460.378
margin_bottom = 311.801
mouse_filter = 2
custom_colors/default_color = Color( 0.345098, 0.4, 0.0470588, 1 )
custom_colors/selection_color = Color( 0.839216, 0.117647, 0.117647, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "Start"

[node name="TextureRect" type="TextureRect" parent="TextureButton2"]
margin_left = 367.817
margin_top = 158.464
margin_right = 1307.82
margin_bottom = 1489.46
rect_rotation = 22.4
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = -822.0
margin_top = -365.0
margin_right = -422.0
margin_bottom = 35.0
rect_rotation = -204.6
rect_pivot_offset = Vector2( 200, 200 )
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 13 )

[node name="RichTextLabel" type="RichTextLabel" parent="TextureButton3"]
margin_left = 72.1594
margin_top = 99.6766
margin_right = 453.159
margin_bottom = 309.677
mouse_filter = 2
custom_colors/default_color = Color( 0.345098, 0.4, 0.0470588, 1 )
custom_colors/selection_color = Color( 0.839216, 0.117647, 0.117647, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "Back"
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="TextureButton3"]
margin_left = 367.817
margin_top = 158.464
margin_right = 1307.82
margin_bottom = 1489.46
rect_rotation = 22.4
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 15 )

[node name="Crystal" type="Sprite" parent="."]
position = Vector2( 436, 904 )
rotation = 1.50073
scale = Vector2( 0.24621, 0.24621 )
texture = ExtResource( 7 )

[node name="CrystalMush" type="Sprite" parent="."]
position = Vector2( 693, 902 )
rotation = -0.255059
scale = Vector2( 0.24621, 0.24621 )
texture = ExtResource( 6 )

[node name="Lizard" type="Sprite" parent="."]
position = Vector2( 1663, 589 )
rotation = -0.22552
scale = Vector2( 0.32797, 0.32797 )
texture = ExtResource( 9 )

[node name="Mortar" type="Sprite" parent="."]
position = Vector2( 1696, 259 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Pestle" type="Sprite" parent="Mortar"]
position = Vector2( 156, -102 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GotoOptions = SubResource( 1 )

[node name="Volume" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Volume"]
margin_left = 685.0
margin_top = 209.0
margin_right = 1190.0
margin_bottom = 426.0
custom_colors/default_color = Color( 0.345098, 0.4, 0.0470588, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "Volume
"
scroll_active = false

[node name="HSlider" type="HSlider" parent="Volume"]
margin_left = 1004.0
margin_top = 202.0
margin_right = 1233.0
margin_bottom = 302.0
rect_min_size = Vector2( 0, 100 )
rect_scale = Vector2( 2, 2 )
max_value = 1.0
step = 0.05
script = ExtResource( 16 )

[node name="Music" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Music"]
margin_left = 720.0
margin_top = 404.0
margin_right = 1225.0
margin_bottom = 621.0
custom_colors/default_color = Color( 0.345098, 0.4, 0.0470588, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "Music"
scroll_active = false

[node name="CheckButton" type="CheckButton" parent="Music"]
margin_left = 976.0
margin_top = 446.0
margin_right = 1052.0
margin_bottom = 491.0
rect_scale = Vector2( 3, 3 )
script = ExtResource( 18 )

[node name="Fade" parent="." instance=ExtResource( 17 )]
visible = false
color = Color( 0.886275, 0.847059, 0.733333, 1 )
text = ""

[node name="Label" type="Label" parent="."]
margin_left = 701.0
margin_top = -10.0
margin_right = 1985.0
margin_bottom = 408.0
custom_colors/font_color = Color( 0.262745, 0.768627, 0.521569, 1 )
custom_colors/font_outline_modulate = Color( 0.12549, 0.219608, 0.152941, 1 )
custom_fonts/font = SubResource( 2 )
text = "Potion Commotion"

[connection signal="mouse_entered" from="TextureButton" to="TextureButton" method="_on_enter_hover"]
[connection signal="mouse_exited" from="TextureButton" to="TextureButton" method="_on_exit_hover"]
[connection signal="pressed" from="TextureButton" to="." method="_on_options"]
[connection signal="mouse_entered" from="TextureButton2" to="TextureButton2" method="_on_enter_hover"]
[connection signal="mouse_exited" from="TextureButton2" to="TextureButton2" method="_on_exit_hover"]
[connection signal="pressed" from="TextureButton2" to="Fade" method="_on_fade_out"]
[connection signal="mouse_entered" from="TextureButton3" to="TextureButton3" method="_on_enter_hover"]
[connection signal="mouse_exited" from="TextureButton3" to="TextureButton3" method="_on_exit_hover"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_back"]
[connection signal="value_changed" from="Volume/HSlider" to="Volume/HSlider" method="_on_value_changed"]
[connection signal="toggled" from="Music/CheckButton" to="Music/CheckButton" method="_on_toggled"]
[connection signal="on_animation_finished" from="Fade" to="." method="_on_start"]
